--- a/umgs.html
+++ b/umgs.html
@@ -91,9 +91,20 @@
 											and Wenjun Chang
 											<br>
 											<a class="image fit"><img src="images/mass_UMG.png" alt="" /></a>
-										<p> We present the first observations of a extremely massive (M<sub>*</sub> > 10<sup>10.98</sup> M<sub>⊙</sub> UMG in the EGS at z = 4.8947. This galaxy lies in one of the
+										<p> We present the first observations of an extremely massive (M<sub>*</sub> > 10<sup>10.98</sup> M<sub>⊙</sub> UMG in the EGS at z = 4.8947. This galaxy lies in one of the
 										most extreme overdensities in the EGS from 3 < z < 6, and is the most massive member. Our initial SED analysis suggest that this galaxy 
 										is likely a post-starburt, with more spectrscopic follow up to confirm its quiescence (see de Graaff et al. 2024).  </p>
+										 <br> <br>
+										<header>
+											<h3><br>An Ultra-Massive Nitrogen Emitter at z ~ 3.8</b></h3>
+										</header>	
+											with M. C. Cooper, Ben Forrest, Adam Muzzin, Danilo Marchesini, Gillian Wilson, Percy Gomez, Ian McConachie, Z. Cemile Marsan, Marianna Annuziatella, 
+											and Wenjun Chang
+											<br>
+											<a class="image fit"><img src="images/Nemit.png" alt="" /></a>
+										<p> We observe an extremely massive (M<sub>*</sub> > 10<sup>11.27</sup> M<sub>⊙</sub> UMG in XMM z = 3.822. Through Keck/LRIS and Keck/MOSFIRE
+										observations, we are able to dissect the evolutionary history of this object. This galaxy is rare nitrogen-emitter, with strong NIV] emission lines.
+										We find that this galaxy has not only the presence of an AGN, but also evidence for extreme star-formation. </p>
 									</section>
 								</article>
 							</div>
