--- a/umgs.html
+++ b/umgs.html
@@ -104,7 +104,8 @@
 											<a class="image fit"><img src="images/Nemit.png" alt="" /></a>
 										<p> We observe an extremely massive (M<sub>*</sub> > 10<sup>11.27</sup> M<sub>⊙</sub> UMG in XMM z = 3.822. Through Keck/LRIS and Keck/MOSFIRE
 										observations, we are able to dissect the evolutionary history of this object. This galaxy is rare nitrogen-emitter, with strong NIV] emission lines.
-										We find that this galaxy has not only the presence of an AGN, but also evidence for extreme star-formation. </p>
+										We find that this galaxy has not only the presence of an AGN, but also evidence for extreme star-formation. This work is ongoing, with a publication 
+										expected late 2024 (Urbano Stawinski et al. in preparation). </p>
 									</section>
 								</article>
 							</div>
@@ -130,7 +131,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2022 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
