--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 										<img src="images/scholarlogo.png" alt="" /></a>
 								</div>
 							</div>
+								Email: sstawins [at] uci.edu  &emsp;  Gmail: ststawinski [at] gmail.com
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
