--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 								</li>
 								<li><a href="pub.html">Publications</a></li>
 								<li><a href="outreach.html">Outreach & Service</a></li>
+								<li><a href="outreach.html">Mentorship</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
