--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									</ul>
 								</li>
 								<li><a href="pub.html">Publications</a></li>
-								<li><a href="outreach.html">Outreach & Service</a></li>
+								<li><a href="outreach.html">Outreach</a></li>
 								<li><a href="outreach.html">Mentorship</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="contact.html">Contact</a></li>
@@ -119,7 +119,14 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Mentorship and Leadership</a></h3>
+								<h3><a href="#">Mentorship</a></h3>
+							</header>
+							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+						</article>
+						<article>
+							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<header>
+								<h3><a href="#">National Ostebrock Leadership</a></h3>
 							</header>
 							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 						</article>
