--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/words.png" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/keck.jpg" alt="" /></a>
 							<header>
 								<h3><a href="research.html">Research</a></h3>
 							</header>
-							<p>I study galaxy evolution through spectrscopic studies. My research interests range from Lyman-alpha emitting galaxies to the 
+							<p>I study galaxy evolution through spectrscopic studies with over 50 nights of observations. My research interests range from Lyman-alpha emitting galaxies to the 
 								diffuse gas surrounding them. Read more here!</p>
 						</article>
 
