--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="research.html" class="image featured"><img src="images/keck.jpg" alt="" /></a>
+							<a href="research.html" class="image featured"><img src="images/keck2.png" alt="" /></a>
 							<header>
 								<h3><a href="research.html">Research</a></h3>
 							</header>
