--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 							<header>
 								<h3><a href="outreach.html">Science Outreach</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>One of my passions lies with science and astronomy outreach for people of all ages. If your interested to know
+							the programs I worked on, read here!</p>
 						</article>
 
 						<article>
@@ -122,7 +123,8 @@
 							<header>
 								<h3><a href="outreach.html">Mentorship</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Mentorship has been crucial to my career. I strive to give back to the community, to uplift others and help
+							students thrive, as my mentors helped me. I have lead and participated in a variety of mentorship programs described here.</p>
 						</article>
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
