--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
 									</ul>
 								</li>
 								<li><a href="pub.html">Publications</a></li>
-								<li><a href="outreach.html">Outreach</a></li>
-								<li><a href="outreach.html">Mentorship</a></li>
+								<li>
+									<a href="research.html">Outreach, Service, & Mentorship</a>
+									<ul>
+										<li><a href="outreach.html">Outreach</a></li>
+										<li><a href="mentoring.html">Mentorship & Leadership</a></li>
+										<li><a href="service.html">Service & Science Communication</a></li>
+									</ul>
+								</li>
 								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 								<li><a href="contact.html">Contact</a></li>
@@ -129,17 +135,18 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="outreach.html">National Ostebrock Leadership</a></h3>
+								<h3><a href="#">Deeper than Deep Survey</a></h3>
 							</header>
 							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 						</article>
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Deeper than Deep Survey</a></h3>
+								<h3><a href="outreach.html">National Ostebrock Leadership</a></h3>
 							</header>
 							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 						</article>
+						
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
