--- a/index.html
+++ b/index.html
@@ -137,14 +137,16 @@
 							<header>
 								<h3><a href="#">Deeper than Deep Survey</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>I conducted a large spectroscopic survey of z > 3 Lyman-alpha emitters in the EGS. This page will direct you to the 
+							survey website. </p>
 						</article>
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
 								<h3><a href="outreach.html">National Ostebrock Leadership</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>As a National Osterbrock Leadership Fellow, we have worked to communicate the need of diversity and inclusion
+							in astronomy departments and provide guidlines to improve on programs at all levels.  </p>
 						</article>
 						
 						<article>
