--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 								</li>
 								<li><a href="pub.html">Publications</a></li>
 								<li>
-									<a href="research.html">Outreach, Service, & Mentorship</a>
+									<a href="">Outreach, Service, & Mentorship</a>
 									<ul>
-										<li><a href="outreach.html">Outreach</a></li>
+										<li><a href="outreach.html">Science Outreach</a></li>
 										<li><a href="mentoring.html">Mentorship & Leadership</a></li>
 										<li><a href="service.html">Service & Science Communication</a></li>
 									</ul>
