--- a/pub.html
+++ b/pub.html
@@ -39,10 +39,17 @@
 									</ul>
 								</li>
 								<li><a href="pub.html">Publications</a></li>
-								<li><a href="outreach.html">Outreach & Service</a></li>
+								<li>
+									<a href="">Outreach, Service, & Mentorship</a>
+									<ul>
+										<li><a href="outreach.html">Science Outreach</a></li>
+										<li><a href="mentoring.html">Mentorship & Leadership</a></li>
+										<li><a href="service.html">Service & Science Communication</a></li>
+									</ul>
+								</li>
 								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="contact.html">Contact</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 
