--- a/outreach.html
+++ b/outreach.html
@@ -58,95 +58,45 @@
 			<!-- Main -->
 				<div class="wrapper style1">
 
-					<div class="container">
-						<article id="main" class="special">
-							<header>
-								<h3>Organizations</h3>
-							</header>
-							<p>
-								At UCI, I am currently part of some organizations that seek to bolster the success of graduate students and provide
-								science communication within the department. Read more about them below!
-							</p>
-							<section>
-								<div class="row">
-									<div class="col-4">
-									</div>
-									<div class="col-12">
-										<h4>Physics & Astronomy Community Excellence (PACE)</h4>
-										<p>
-										<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. The goal of the program is to help graduate students
-										at all levels to be successful in grad school as well as teach our mentors valuable leadership and mentorship skills. 
-										In my second year at UCI, I joined the PACE leadership team and now am running the program with three other team members. 
-										Our programs include - Exceleration (1-on-1 grad peer mentoring for first-year graduates), Fire Up Fridays 
-										(bi-weekly group workshops for incoming grads), and Attitude Thrusters (group workshops for graduates at all levels). PACE
-										is very thankful to be funded by <a href="https://aas.org/nolp">AAS - National Osterbrock Leadership Program (NOLP). </a>
-										</p>
-									</div>
-								</div>
-							</section>
-							<section>
-								<div class="row">
-									<div class="col-4">
-										<a href="#" class="image fit"><img src="images/BlogLogo.png" alt="" /></a>
-									</div>
-									<div class="col-8">
-										<h4>The UCI Physics and Astronomy Blog</h4>
-										<p>
-										<a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
-										outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and research accomplishments, as well as communicate 
-										relevant physics topics through outreach. I have been
-										on the team since my first year at UCI, and have multiple roles on the team. Mainly I have been in charge of our departments 
-										<a href="https://www.physastroblog.ps.uci.edu/category/student-spotlight/">graduate student spotlight </a>, which
-										seeks to call attention to graduate students that have done extraordinary things within our department. 
-										</p>
-									</div>
-								</div>
-							</section>
-							<section>
-								<div class="row gtr-200">
-									<div class="col-4">
-									</div>
-									<div class="col-12">
-										<h4>Physics Grad Cacus (PGC)</h4>
-										<p>
-											I am also an officer for the <a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a>, which is a graduate student-run organization within the Department of Physics and Astronomy 
-											that seeks to support and improve academic and career success, foster individual and community well-being, and be a voice for graduate students 
-											within our department.
-										</p>
-									</div>
-								</div>
-							</section>
-							<header>
-								<h3>Community Outreach</h3>
-							</header>
-							<p>
-								Throughout my career, I have been involved with community outreach. Here are some of the programs/workshops I had the opportunity 
-								to be a part of!
-							</p>
-							<section>
-								<div class="row">
-									<div class="col-12">
-										<h4>Community Astronomy Lecturer</h4>
-										<p>
-										I give workshops to kids in the community about solar system science at the Lancaster Woodland Preserve in CA.
-										</p>
-										<h4>Mount Laguna Observatory Summer Program</h4>
-										<p>
-										At San Diego State University, I was able to help with the Mount Laguna Observatory Summer Program, which provides lectures and telescope
-										viewings for the community. 
-										</p>
-										<h4>Planetarium Show Presenter</h4>
-										<p>
-										During the community fair nights at San Diego State, I created and gave planetarium shows. I also trained others to use the planetarium.
-										</p>
-										<h4>Telescope Night Lecturer</h4>
-										<p>
-										At San Diego State University and Arizona State University, I had the opportunity to prepare and give night sky tours to the community, ranging
-										from elementary school age to undergraduate students. 
-										</p>
-									</div>
-								</div>
-							</section>
+					<section id="features" class="container special">
+						<header>
+							<p>Learn about some of the great outreach programs I got to be a part of! </p>
+						</header>
+						<div class="row">
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">Astronomy Workshops for Kids</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">MLO Summer Nights</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">SDSU Planetarium Shows</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+						</div>
+					</section>
+
+				</div>
 						</article>
 					</div>
 				</div>
