--- a/outreach.html
+++ b/outreach.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Outreach & Service</title>
+		<title>Science Outreach</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Outreach & Service</h1>
+								<h1>Science Outreach</h1>
 							</header>
 						</div>
 
