--- a/service.html
+++ b/service.html
@@ -59,28 +59,31 @@
 				<div class="wrapper style1">
 
 					<section id="features" class="container special">
-						<header>
-							<p>Learn about some of the great outreach programs I got to be a part of! </p>
-						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Astronomy Workshops for Kids</a></h3>
+									<h3><a href="#">UCI Physics and Astronomy Blog</a></h3>
 								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								<p><a href="https://www.physastroblog.ps.uci.edu/">The UCI Physics and Astronomy Blog</a> is a graduate student run organization that focuses on communication and 
+										outreach efforts within the Physics and Astronomy department at UCI. Our goal is to increase awareness of the department activities and 
+									research accomplishments, as well as communicate 
+										relevant physics topics through outreach. I have been
+										on the team since my first year at UCI, and have multiple roles on the team. Mainly I have been in charge of our departments 
+										<a href="https://www.physastroblog.ps.uci.edu/category/student-spotlight/">graduate student spotlight </a>, which
+										seeks to hightlight graduate students that have done extraordinary things within our department. 
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">MLO Summer Nights</a></h3>
+									<h3><a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								I am also an officer for the <a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a>, 
+								which is a graduate student-run organization within the Department of Physics and Astronomy 
+								that seeks to support and improve academic and career success, foster individual and community well-being, and be a voice for graduate students 
+								within our department.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
