--- a/service.html
+++ b/service.html
@@ -89,11 +89,11 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">SDSU Planetarium Shows</a></h3>
+									<h3><a href="#">UCI Astrophysics Journal Club Leader</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									During my time at UCI, I got to serve as co-organizer and leader of the department's weekly Astrophysics journal club meetings.  
+									
 								</p>
 							</article>
 						</div>
