--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
 					<section id="features" class="container special">
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/BlogLogo.png" alt="" /></a>
 								<header>
 									<h3><a href="#">UCI Physics and Astronomy Blog</a></h3>
 								</header>
