--- a/outreach.html
+++ b/outreach.html
@@ -94,11 +94,51 @@
 								</p>
 							</article>
 						</div>
-					</section>
 
-				</div>
-						</article>
-					</div>
+						<header>
+							<p>Below are some of the mentoring/leadership programs I am a part of.</p>
+						</header>
+						<div class="row">
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<header>
+									<h3><a href="https://uci-pace.github.io/">Physcis and Astronomy Community Excellence (PACE)</a></h3>
+								</header>
+								<p>
+								<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. 
+								The goal of the program is to help graduate students
+								at all levels to be successful in grad school as well as teach our mentors valuable leadership and mentorship skills. 
+								In my second year at UCI, I joined the PACE leadership team and now am running the program with three other team members. 
+								Our programs include - Exceleration (1-on-1 grad peer mentoring for first-year graduates), Fire Up Fridays 
+								(bi-weekly group workshops for incoming grads), and Attitude Thrusters (group workshops for graduates at all levels). PACE
+								is very thankful to be funded by <a href="https://aas.org/nolp">AAS - National Osterbrock Leadership Program (NOLP).
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">National Osterbrock Leadership Program (NOLP)</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">Undergraduate Peer Mentorship</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+						</div>
+
+					</section>
+					
+
 				</div>
 			<!-- Footer -->
 				<div id="footer">
