--- a/cgm.html
+++ b/cgm.html
@@ -46,6 +46,9 @@
 										<li><a href="service.html">Service & Science Communication</a></li>
 									</ul>
 								</li>
+								<li><a href="pub.html">Publications</a></li>
+								<li><a href="outreach.html">Outreach & Mentorship</a></li>
+								<li><a href="service.html">Service & Science Communication</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="CV/StawinskiStephanie_CV.pdf">CV</a></li>
 								<li><a href="contact.html">Contact</a></li>
