--- a/service.html
+++ b/service.html
@@ -69,7 +69,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pgc dark.jpg" alt="" /></a>
 								<header>
 									<h3><a href="https://sites.uci.edu/physicsgradcaucus/">UCI Physics Grad Cacus</a></h3>
 								</header>
