--- a/outreach.html
+++ b/outreach.html
@@ -61,7 +61,7 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 								<header>
-									<h3><a href="https://uci-pace.github.io/">Physcis & Astronomy Community Excellence (PACE)</a></h3>
+									<h3><a href="https://uci-pace.github.io/">Physcis & Astronomy Community Excellence</a></h3>
 								</header>
 								<p>
 								<a href="https://uci-pace.github.io/">PACE</a> is a graduate student led peer-mentoring program at UCI. 
@@ -76,7 +76,7 @@
 							<article class="col-4 col-12-mobile special">
 								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">National Osterbrock Leadership Program (NOLP)</a></h3>
+									<h3><a href="#">National Osterbrock Leadership Program</a></h3>
 								</header>
 								<p>
 									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
