--- a/outreach.html
+++ b/outreach.html
@@ -59,7 +59,7 @@
 						</header>
 						<div class="row">
 							<article class="col-6 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
 								<header>
 									<h3><a href="https://uci-pace.github.io/">Physcis & Astronomy Community Excellence</a></h3>
 								</header>
@@ -74,13 +74,14 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
 								<header>
 									<h3><a href="#">National Osterbrock Leadership Program</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									As a National Osterbrock Fellow, we strive to educate the community on the various ways graduate students may engage
+									in leadership and DEI efforts at their Universities. I have helped organiize multiple splinter sessions at AAS as well as
+									a white paper on Reinventing the Astronomy Ph.D. to foster valuable professional skills inside and outside academia. 
 								</p>
 							</article>
 						</div>
@@ -90,33 +91,34 @@
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
+
+								
 								<header>
 									<h3><a href="#">Astronomy Workshops for Kids</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									I developed and ran astronomy workshops for kids of all ages in the community of Lancaster, CA. These interactive worshops
+									aimed to inspire youth to pursue science/astronomy. 
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
 								<header>
 									<h3><a href="#">MLO Summer Nights</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Made possible by San Diego State University, I would help run the public Mount Laguna Summer nights, which would bring hundreds of people
+									to the observatory. We would give an astronomy lecture, followed by a night sky tour and telescope viewing. 
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
 								<header>
 									<h3><a href="#">SDSU Planetarium Shows</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									I would also develop and run Planetarium shows for public school students (K-12) as well as college students at SDSU. 
 								</p>
 							</article>
 						</div>
