--- a/service.html
+++ b/service.html
@@ -81,7 +81,7 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
 								<header>
 									<h3><a href="#">UCI Astrophysics Journal Club Leader</a></h3>
 								</header>
