--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<img src="images/scholarlogo.png" alt="" /></a>
 								</div>
 							</div>
-								<bf>Email:</bf> sstawins [at] uci.edu - <a href="CV/StawinskiStephanie_CV.pdf"> Full CV </a> - <!-- <a href="CV/StawinskiStephanie_CV.pdf"> Abbreviated CV </a>  -->
+								<bf>Email:</bf> sstawins [at] uci.edu - <a href="CV/StawinskiStephanie_CV.pdf"> Full CV </a>  <!--  - <a href="CV/StawinskiStephanie_CV.pdf"> Abbreviated CV </a>  -->
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
