--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
 										<header>
 											<h4>Stephanie Urbano Stawinski </h4>
 										</header>
-										<p>Frederick Reines Hall, 2186a <br>
-										Department of Physics and Astronomy <br>
+										<p>Broida Hall, 2324 <br>
+										Department of Physics <br>
 										University of California, Irvine</p>
-										<p>UCI Email: sstawins [at] uci.edu<br>
+										<p>UCSB Email: sstawins [at] ucsb.edu<br>
 										Gmail: ststawinski [at] gmail.com</p>
 										<p>Twitter: <a href="https://twitter.com/astrostawinski"> @astrostawinski </a>  </p>
 									</section>
@@ -70,7 +70,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2025 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>										</ul>
 									</div>
 
