--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1>Stephanie Urbano Stawinski</h1>
 								<hr />
-								<p>Ph.D. Candidate at University of California, Irvine</p>
+								<p>Postdoctoral Scholar at University of California, Santa Barbara</p>
 							</header>
 						</div>
 
@@ -77,17 +77,19 @@
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
-							Hello! I am an Astrophysics Ph.D candidate and observational astronomer at University of California, Irvine. My main interests surround galaxy formation and evolution at high redshifts. 
+							Hello! I am an Astrophysics postdoc and observational astronomer at University of California, Santa Barbara. My main interests surround galaxy formation and evolution at high redshifts. 
 								I work mostly with spectroscopic observations, both in emission and in absoprtion. 
+								
 						<br> In 2019, I earned my MS in Astronomy at San Diego State University studying the <a href="cgm.html"><span style="color:#4b0082">gas around galaxies</span></a> (specifically involving the CGM of 
 						Damped Lyman-alpha systems) and its effects on the host galaxy. 
-						Now at UCI, I have been working on detecting <a href="lyaE.html"><span style="color:#4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (both DEIMOS and LRIS), I have conducted large
+						I graduated with my Ph.D. at University of California, Irvine in 2025. There, I worked on detecting <a href="lyaE.html"><span style="color:#4b0082">Lyman-alpha emitters</span></a> at z > 4. Using the telescopes at Keck (both DEIMOS and LRIS), I have conducted large
 								spectroscopic surveys searching for Lyman-alpha emission in distant galaxies.
-						<br>I am part of the WERLS collaboration which sought to find Lyman-alpha emitters at the end of reionization in the EGS, COSMOS, and UDS fields using Keck/LRIS. I am 
-						also part of the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from <a href="umg.html"><span style="color:#4b0082">Ultra-Massive galaxies</span></a> at z > 4. <br>
+								
+						<br>I recently joined the COSMOS team, working alongside Caitlin Casey at UCSB. I am also part of the WERLS collaboration which sought to find Lyman-alpha emitters at the end of reionization in the EGS, COSMOS, and UDS fields using Keck/LRIS. 
+								I also work with the MAGAZ3NE collaboration, specifically studying detected Lyman-alpha emission from <a href="umg.html"><span style="color:#4b0082">Ultra-Massive galaxies</span></a> at z > 4. <br>
 						Outside of my research, I believe mentorship, teaching, and outreach are 
 						incredibly important and crucial in encouraging others to pursue science and helping students succeed in academia. Throughout my career, I 
-						strive to give back to the community in this way. Take a look at some of the outreach efforts and mentorship programs I am a part of
+						strive to give back to the community in this way. Take a look at some of the outreach efforts and mentorship programs I have had the privilege to be a part of
 						 <a href="outreach.html"><span style="color:#4b0082">here</span></a>. 
 						</p>
 						</div>
