--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<img src="images/scholarlogo.png" alt="" /></a>
 								</div>
 							</div>
-								<bf>Email:</bf> sstawins [at] uci.edu - <a href="CV/StawinskiStephanie_CV.pdf"> Full CV </a>  <!--  - <a href="CV/StawinskiStephanie_CV.pdf"> Abbreviated CV </a>  -->
+								<bf>Email:</bf> sstawins [at] ucsb.edu - <a href="CV/StawinskiStephanie_CV.pdf"> Full CV </a>  <!--  - <a href="CV/StawinskiStephanie_CV.pdf"> Abbreviated CV </a>  -->
 							</div>
 							<div class="col-8 col-12-mobile imp-mobile">
 							<p>										
@@ -112,13 +112,13 @@
 										<header>
 											<h3>Contact Info</h3>
 										</header>
-										<p>Twitter: <a href="https://twitter.com/astrostawinski"> @astrostawinski </a> &emsp;  Email: sstawins [at] uci.edu  &emsp;  Gmail: ststawinski [at] gmail.com</p>
+										<p>Twitter: <a href="https://twitter.com/astrostawinski"> @astrostawinski </a> &emsp;  Email: sstawins [at] ucsb.edu  &emsp;  Gmail: ststawinski [at] gmail.com</p>
 									</section>
 
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; 2024 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
+											<li>&copy; 2025 Stawinski </li><li> Design: <a href="http://html5up.net">HTML5 UP</a></li> <br> 
 											<li><a href="https://spacetelescope.org/news/heic1411/">Image Credit: NASA, ESA, H. Teplitz and M. Rafelski (IPAC/Caltech), A. Koekemoer (STScI), R. Windhorst (Arizona State University), and Z. Levay (STScI)</a>  </li>
 										</ul>
 									</div>
